--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     align-items: center;
     width: auto;
     height: 100vh;
-    background-image: url(/1575933750_26-47.jpg);
+    background-image: url(./1575933750_26-47.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -24,7 +24,7 @@ section {
     height: 95%;
     border: 2px solid black;
     border-radius: 7%;
-    background-image: url(/s1626996661_19-kartinkin-com-p-serii-fon-abstraktsiya-geometriya-krasivo-19.jpg);
+    background-image: url(./s1626996661_19-kartinkin-com-p-serii-fon-abstraktsiya-geometriya-krasivo-19.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
